index working except for search bar

--- a/finale/soap-calc-frontend/index.html
+++ b/finale/soap-calc-frontend/index.html
@@ -51,34 +51,36 @@
         </section>
     <div id="recipe-container"></div>
         <div class="everything-container">
-            <section class="column-one">
-                <img class="recipe-img">
-            </section>
-            <section class="column-two">
-                <div class="ingredients">
-                    <h3>Ingredients</h3>
-                    <ul>
-                        <!-- ingredients go here -->
-                        <!-- <li>3.2 oz Castor Oil</li>
-                        <li>4.8 oz Coconut Oil</li>
-                        <li>24 oz Lard</li>
-                        <li>8.7 oz Water</li>
-                        <li>4.35 oz Sodium Hydrozide</li></li> -->
-                    </ul>
-                    <h4> Additives </h4>
-                    <ul>
-                        <!-- <li>  any additives/colors  </li> -->
-                    </ul>
-                    <h4> Fragrance  </h4>
-                    <ul>
-                        <!-- <li> any fragrance/essential oils </li> -->
-                    </ul>
-                </div>
-                <p class="description">Description
-                    <!-- description goes here -->
-                    <!-- Mild on the skin, lasts a decent amount of time in the shower (depending on water drainage). -->
-                </p>
-            </section>
+            <div class="recipe">
+                <section class="column-one">
+                    <img class="recipe-img">
+                </section>
+                <section class="column-two">
+                    <div class="ingredients">
+                        <h3>Ingredients</h3>
+                        <ul>
+                            <!-- ingredients go here -->
+                            <!-- <li>3.2 oz Castor Oil</li>
+                            <li>4.8 oz Coconut Oil</li>
+                            <li>24 oz Lard</li>
+                            <li>8.7 oz Water</li>
+                            <li>4.35 oz Sodium Hydrozide</li></li> -->
+                        </ul>
+                        <h4> Additives </h4>
+                        <ul>
+                            <!-- <li>  any additives/colors  </li> -->
+                        </ul>
+                        <h4> Fragrance  </h4>
+                        <ul>
+                            <!-- <li> any fragrance/essential oils </li> -->
+                        </ul>
+                    </div>
+                    <p class="description">Description
+                        <!-- description goes here -->
+                        <!-- Mild on the skin, lasts a decent amount of time in the shower (depending on water drainage). -->
+                    </p>
+                </section>
+            </div>
         </div>
     </div>
     <footer>
