main soap calc css working...not yet working: js for soap calc

--- a/finale/soap-calc-frontend/soapcalc.html
+++ b/finale/soap-calc-frontend/soapcalc.html
@@ -7,7 +7,7 @@
     <meta name="description" content="This site shows a recipe for Apple Crisp">
     <meta name="author" content="Chelsea Saunders">
     <link rel="stylesheet" href="soapCalc.css">
-    <script src="./soapCalc.js" type="module"></script>
+    
     <pre id="recipe-output"></pre>
 
     <!-- open graph (og) meta tags for social media sites -->
@@ -73,7 +73,7 @@
                                 type="text"
                                 name="total-oil-weight"
                                 value=""
-                                placeholder="Total Soap Weight"
+                                placeholder="Total Soap Weight (in oz)"
                                 required
                             />
                         </div>
@@ -207,7 +207,7 @@
                     </div> 
                     <div class="bottom-buttons">
                         <button type="button" id="clear-field" class="clear-field">Clear Field</button>
-                        <button type="button" id="calculate-recipe" class="calculate-recipe">Calculate Recipe</button>
+                    <button type="button" id="calculate-recipe" class="calculate-recipe">Calculate Recipe</button>
                     </div>
                 </section>
                 
@@ -226,4 +226,5 @@
             <a href="#"><img src="images/pinterest.svg" alt="pinterest icon" class="pinterest"></a>
         </nav>
     </footer>
+    <script src="./soapCalc.js" type="module"></script>
 </body>
