everything but recipe display working

--- a/finale/soap-calc-frontend/index.html
+++ b/finale/soap-calc-frontend/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="This site shows a recipe for Apple Crisp">
     <meta name="author" content="Chelsea Saunders">
     <link rel="stylesheet" href="soapCalc.css">
-    <script src="./soapCalc.js" type="module"></script>
+    <script src="./drsIndex.js" type="module"></script>
     <script type="module" src="./recipes.mjs"></script>
 
     <!-- open graph (og) meta tags for social media sites -->
@@ -28,7 +28,7 @@
             </div>
         <!-- search bar...initially hidden -->
         <div class="search-container">
-            <button class="search-icon" aria-label="Search">
+            <button class="search-icon" aria-label="toggles search bar">
                 <img src="images/search 2.37.51 PM.svg" alt="Search Icon" class="icon">
             </button>
             <input type="text" class="search-bar" placeholder="Search..." style="display: none">
