--- a/finale/soap-calc-frontend/soapcalc.html
+++ b/finale/soap-calc-frontend/soapcalc.html
@@ -7,7 +7,7 @@
     <meta name="description" content="This site shows a recipe for Apple Crisp">
     <meta name="author" content="Chelsea Saunders">
     <link rel="stylesheet" href="soapCalc.css">
-    
+    <script src="./soapCalc.js" type="module"></script>
     <pre id="recipe-output"></pre>
 
     <!-- open graph (og) meta tags for social media sites -->
@@ -27,13 +27,15 @@
                 <h1 class="header-title">Desert Rain Soap</h1>
                 <h2 class="page-title">Lather Lab</h2>
             </div>
+            <!-- <div class="wrapper"> -->
+                <img src="images/drs-logo.jpeg" alt="Desert Rain Soap Logo" class="logo">
             <!-- search bar...initially hidden -->
-            <div class="search-container">
-                <button class="search-icon" aria-label="Search">
+            <!-- <div class="search-container">
+                <button class="search-icon" aria-label="toggles search bar">
                     <img src="images/search 2.37.51 PM.svg" alt="Search Icon" class="icon">
                 </button>
                 <input type="text" class="search-bar" placeholder="Search..." style="display: none">
-            </div>
+            </div> -->
         </nav>
     </header>
         <!-- nav links -->
@@ -178,8 +180,8 @@
                                 <option value="no">No</option>
                             </select>
                             <div class="buttons">
-                                <button type="button" id="add-additive">Enter Input</button>
-                                <button type="button" id="reset-recipe">Reset Recipe</button>
+                                <button type="button" id="add-additive" aria-label="Enter input button">Enter Input</button>
+                                <button type="button" id="reset-recipe" aria-label="Button to reset all inputs in recipe">Reset Recipe</button>
                             </div>
                         </div>
                     </section>
@@ -192,12 +194,12 @@
                         <!-- Dynamically added oils will appear here -->
                     </div>                    
                     <div id="selected-additives">
-                        <h3>Selected Additives</h3>
+                        <h3>Fragrance/Essential Oil</h3>
                         <!-- Dynamically added additives will appear here -->
                     </div>                    
                     <div class="bottom-buttons">
-                        <button type="button" id="clear-field" class="clear-field">Clear Field</button>
-                    <button type="button" id="calculate-recipe" class="calculate-recipe">Calculate Recipe</button>
+                        <button type="button" id="clear-field" class="clear-field" aria-label="clears oils field">Clear Field</button>
+                    <button type="button" id="calculate-recipe" class="calculate-recipe" aria-label="calculates soap recipe">Calculate Recipe</button>
                     </div>
                     <div id="recipe-output" class="recipe-output" style="display: none;">
                         <h2>Recipe</h2>
