working except for frag/eo

--- a/finale/soap-calc-frontend/soapcalc.html
+++ b/finale/soap-calc-frontend/soapcalc.html
@@ -64,6 +64,7 @@
                                 <option value="unit-of-measurement">Choose One</option>
                                 <option value="oz">oz (ounces)</option>
                                 <option value="g">g (grams)</option>
+                                <option value="lbs">lbs (pounds)</option>
                             </select>
                         </div>
                         <div class="total-oil-weight">
