--- a/finale/soap-calculator/soapcalc.html
+++ b/finale/soap-calculator/soapcalc.html
@@ -22,20 +22,13 @@
         <nav class="navbar">
             <!-- wrapper for logo, title and search bar -->
              <div class="wrapper">
-                <img src="images/drs-logo.jpeg" alt="Desert Rain Soap Logo" class="logo">
+                <img src="images/desert-rain-soap-logo.jpeg" alt="Desert Rain Soap Logo" class="logo">
             <div class="header-titles">
                 <h1 class="header-title">Desert Rain Soap</h1>
                 <h2 class="page-title">Lather Lab</h2>
             </div>
             <!-- <div class="wrapper"> -->
-                <img src="images/drs-logo.jpeg" alt="Desert Rain Soap Logo" class="logo">
-            <!-- search bar...initially hidden -->
-            <!-- <div class="search-container">
-                <button class="search-icon" aria-label="toggles search bar">
-                    <img src="images/search 2.37.51 PM.svg" alt="Search Icon" class="icon">
-                </button>
-                <input type="text" class="search-bar" placeholder="Search..." style="display: none">
-            </div> -->
+                <img src="images/desert-rain-soap-logo.jpeg" alt="Desert Rain Soap Logo" class="logo">
         </nav>
     </header>
         <!-- nav links -->
