updated page link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="week9/recipes/index.html">Recipes</a>
         <a href="week 10/recipes/index.html">Recipes2</a>
         <a href="finale/site-plan.html">Site-Plan</a>
-        <a href="finale/soap-calc/index.html">Desert Rain Soap</a>
+        <a href="finale/soap-calculator/index.html">Desert Rain Soap</a>
     </nav>
     <footer></footer>
 </body>
