calculate recipe working correctly

--- a/finale/soap-calculator/soapcalc.html
+++ b/finale/soap-calculator/soapcalc.html
@@ -194,12 +194,10 @@
                     </div>
                     <div id="static-recipe-view" class="static-recipe-view" style="display: none;">
                         <h2>Recipe</h2>
-                        <div id="static-recipe-content">
-                            <!-- recipe content will be loaded here -->
-                        </div>
+                        <div id="static-recipe-content"></div>
                         <button id="close-recipe">X</button>
                     </div>   
-                    <button id="view-recipe" type="button">View Recipe</button>                 
+                    <!-- <button id="view-recipe" type="button">View Recipe</button>                  -->
                 </section>
                 
             </fieldset>
